--- a/pom.xml
+++ b/pom.xml
@@ -31,36 +31,18 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <!-- Dependency versions -->
-        <jenkins.version>2.375.4</jenkins.version>
-<!--        <jenkins-test-harness.version>1954.v2e3fd5465b_a_6</jenkins-test-harness.version>-->
-        <groovy.version>2.4.21</groovy.version>
-<!--        <junit.version>4.12</junit.version>-->
-        <jenkins-pipeline-unit.version>1.17</jenkins-pipeline-unit.version>
-<!--        <groovy-eclipse-compiler.version>3.5.0-01</groovy-eclipse-compiler.version>-->
-<!--        <java.level>11</java.level>-->
+        <jenkins.version>2.361.4</jenkins.version>
         <revision>1.2.0</revision>
         <changelist>999999-SNAPSHOT</changelist>
     </properties>
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
-<!--            <artifactId>apache-httpcomponents-client-4-api</artifactId>-->
-<!--            <version>4.5.5-2.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.jenkins-ci.tools</groupId>-->
-<!--            <artifactId>maven-hpi-plugin</artifactId>-->
-<!--            <version>3.5</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.jenkins-ci.plugins</groupId>-->
-<!--            <artifactId>credentials</artifactId>-->
-<!--            <version>1236.v31e44e6060c0</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>credentials</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>plain-credentials</artifactId>
-            <version>143.v1b_df8b_d3b_e48</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -80,17 +62,10 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
-            <version>324.va_f5d6774f3a_d</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-step-api</artifactId>
-            <version>639.v6eca_cd8c04a_a_</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>apache-httpcomponents-client-4-api</artifactId>
-            <version>4.5.14-150.v7a_b_9d17134a_5</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -100,37 +75,31 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-cps</artifactId>
-            <version>3659.v582dc37621d8</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-job</artifactId>
-            <version>1284.v2fe8ed4573d4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-basic-steps</artifactId>
-            <version>1017.vb_45b_302f0cea_</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-durable-task-step</artifactId>
-            <version>1246.v5524618ea_097</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-api</artifactId>
-            <version>1208.v0cc7c6e0da_9e</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-support</artifactId>
-            <version>839.v35e2736cfd5c</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.powermock/powermock-core -->
@@ -167,20 +136,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>${groovy.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.lesfurets</groupId>
-            <artifactId>jenkins-pipeline-unit</artifactId>
-            <version>${jenkins-pipeline-unit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -228,16 +185,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.jenkins-ci.plugins</groupId>
-                <artifactId>script-security</artifactId>
-                <version>1244.ve463715a_f89c</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jenkins-ci.plugins</groupId>
-                <artifactId>scm-api</artifactId>
-                <version>667.v8b_6e07cdc7f2</version>
-                <scope>test</scope>
+                <groupId>io.jenkins.tools.bom</groupId>
+<!--                <artifactId>bom-2.375.x</artifactId>-->
+<!--                <version>2025.v816d28f1e04f</version>-->
+                <artifactId>bom-2.361.x</artifactId>
+                <version>1836.vfe602c266c05</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -254,11 +208,6 @@
                     <argLine>
                         --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
                     </argLine>
-                    <forkCount>1</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <threadCount>1</threadCount>
-                    <parallel>suites</parallel>
-                    <shutdown>kill</shutdown>
                 </configuration>
             </plugin>
             <plugin>
@@ -269,7 +218,6 @@
                         <hudson.slaves.NodeProvisioner.initialDelay>0</hudson.slaves.NodeProvisioner.initialDelay>
                         <hudson.slaves.NodeProvisioner.MARGIN>50</hudson.slaves.NodeProvisioner.MARGIN>
                         <hudson.slaves.NodeProvisioner.MARGIN0>0.85</hudson.slaves.NodeProvisioner.MARGIN0>
-                        <jenkins.host.address>${jenkins.host.address}</jenkins.host.address>
                     </systemProperties>
                     <minimumJavaVersion>11</minimumJavaVersion>
                 </configuration>
@@ -277,7 +225,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
+                <version>0.8.8</version>
                 <executions>
                     <execution>
                         <goals>
@@ -298,23 +246,11 @@
     </build>
     <repositories>
         <repository>
-            <id>central</id>
-            <url>https://repo1.maven.org/maven2/</url>
-        </repository>
-        <repository>
-            <id>releases.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/releases/</url>
-        </repository>
-        <repository>
             <id>repo.jenkins-ci.org</id>
             <url>https://repo.jenkins-ci.org/public/</url>
         </repository>
     </repositories>
     <pluginRepositories>
-        <pluginRepository>
-            <id>releases.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/releases/</url>
-        </pluginRepository>
         <pluginRepository>
             <id>repo.jenkins-ci.org</id>
             <url>https://repo.jenkins-ci.org/public/</url>
